Tue Nov 15 01:03:56 1994  Rob Savoye  (rob@slipknot.cygnus.com)

	* op50-rom.c, w89k-rom.c, monitor.c: Modify to usr two variables
	to set remote load type and protocol.
	* rom68k-rom.c: Add to_stop in target_ops.

Mon Nov 14 08:51:29 1994  Stu Grossman  (grossman@cygnus.com)

	* Makefile.in:  Install gdbtk.tcl.
	* configure.in:  Add ENABLE_GDBTK flag.
	* gdbtk.c (gdb_sourcelines):  Returns list of source lines
	containing code.  (gdb_regnames):  Returns list of register names.

Sat Nov 12 21:55:47 1994  Jeff Law  (law@snake.cs.utah.edu)

	* somsolib.c: Add TODO list.
	(som_solib_add): Immediately return if $SHLIB_INFO$ sections does
	not exist or has size zero.  Slightly simplify error handling.
	Keep an internal list of all the loaded shared libraries and
	various tidbits of information about the loaded shared libraries.
	Build section tables for each loaded shared library and add those
	tables to the core target if necessary.
	(som_solib_create_inferior_hook): Force re-reading of shared
	libraries at exec time.
	(som_sharedlibrary_info_command): New function for dumping
	information about the currently loaded shared libraries.
	(_initialize_som_solib): New function.

Sat Nov 12 02:26:50 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* Makefile.in (copying.o, f-exp.tab.o, dpx2-nat.o, dstread.o,
	i386aix-nat.o, i386m3-nat.o, irix5-nat.o, lynx-nat.o, m3-nat.o,
	mipsm3-nat.o, ns32km3-nat.o, remote-e7000.o, remote-os9k.o):
	Add dependencies.
	(copying.o, os9kread.o, remote.o):  Update dependencies.

	* valarith.c (value_sub):  When subtracting pointers, only
	check for a match of the pointed to element lengths.
	Cast element length to LONGEST to obtain a signed result for
	pointer subtractions.

Fri Nov 11 10:51:07 1994  Jeff Law  (law@snake.cs.utah.edu)

	* ch-exp.y (yylex): Fix off-by-one error when converting string to
	lowercase.  Null terminate new string.

	* hppa-tdep.c (rp_saved): Handle IMPORT stubs too.
