@@ -1,3 +1,8 @@
+Tue Nov 15 14:25:47 1994  Stan Shebs  (shebs@andros.cygnus.com)
+
+	* i386-stub.c, m68k-stub.c, sparc-stub.c, sparcl-stub.c: Mask out
+	the top bit returned by getDebugChar.
+
 Tue Nov 15 01:03:56 1994  Rob Savoye  (rob@slipknot.cygnus.com)
 
 	* op50-rom.c, w89k-rom.c, monitor.c: Modify to usr two variables
